--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "t3d-dynamic-sky",
   "version": "0.0.2",
   "description": "Dynamic sky addon for t3d.",
+  "type": "module",
   "main": "./build/t3d.dynamicsky.js",
   "module": "./build/t3d.dynamicsky.module.js",
   "repository": {
@@ -44,11 +45,11 @@
   "devDependencies": {
     "@babel/core": "^7.18.13",
     "@babel/preset-env": "^7.18.10",
-    "@rollup/plugin-babel": "^5.3.1",
-    "eslint": "^7.32.0",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-terser": "^0.4.1",
+    "eslint": "^8.38.0",
     "eslint-plugin-html": "^7.1.0",
-    "rollup": "^2.78.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup": "^3.20.2"
   },
   "peerDependencies": {
     "t3d": "^0.1.1"
